<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarContacto">

    <TextView
        android:id="@+id/tvConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/tv_confirmar"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_confirmar"
            android:textSize="@dimen/tamaño_letra"
            android:layout_below="@id/tvConfirmar"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/margen_izq_der"
            android:layout_marginRight="@dimen/margen_izq_der"
            android:layout_marginTop="@dimen/margen_izq_der"
            android:layout_marginBottom="@dimen/margen_izq_der"/>

        <TextView
            android:id="@+id/tvDatoNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hola"
            android:layout_gravity="center_vertical">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFechaNac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fecha Nac"
            android:textSize="@dimen/tamaño_letra"
            android:textStyle="bold"
            android:layout_below="@id/tvNombre"
            android:layout_marginLeft="@dimen/margen_izq_der"
            android:layout_marginRight="@dimen/margen_izq_der"
            android:layout_marginTop="@dimen/margen_izq_der"
            android:layout_marginBottom="@dimen/margen_izq_der"/>

        <TextView
            android:id="@+id/tvDatoFechaNac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hola"
            android:layout_gravity="center_vertical">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/et_telefono"
            android:textSize="@dimen/tamaño_letra"
            android:layout_below="@id/tvFechaNac"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/margen_izq_der"
            android:layout_marginRight="@dimen/margen_izq_der"
            android:layout_marginTop="@dimen/margen_izq_der"
            android:layout_marginBottom="@dimen/margen_izq_der"/>

        <TextView
            android:id="@+id/tvDatoTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hola"
            android:layout_gravity="center_vertical">
        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/et_email"
            android:textSize="@dimen/tamaño_letra"
            android:layout_below="@id/tvTelefono"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/margen_izq_der"
            android:layout_marginRight="@dimen/margen_izq_der"
            android:layout_marginTop="@dimen/margen_izq_der"
            android:layout_marginBottom="@dimen/margen_izq_der"/>

        <TextView
            android:id="@+id/tvDatoEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hola"
            android:layout_gravity="center_vertical">
        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/et_descripcion"
            android:textSize="@dimen/tamaño_letra"
            android:layout_below="@id/tvEmail"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/margen_izq_der"
            android:layout_marginRight="@dimen/margen_izq_der"
            android:layout_marginTop="@dimen/margen_izq_der"
            android:layout_marginBottom="@dimen/margen_izq_der"/>



    </LinearLayout>

    <TextView
        android:id="@+id/tvDatoDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hola"
        android:layout_marginLeft="@dimen/margen_izq_der"
        android:layout_marginRight="@dimen/margen_izq_der"
        android:layout_marginTop="@dimen/margen_izq_der"
        android:layout_marginBottom="@dimen/margen_izq_der"/>

    <Button
        android:id="@+id/btnMiBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDescripcion"
        android:text="@string/texto_boton_editar"
        android:theme="@style/MiBotonRaised"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/margen_izq_der"
        android:layout_marginRight="@dimen/margen_izq_der"/>
</LinearLayout>